commiting small changes

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,7 +16,7 @@
                 </nav>
                 <footer>
                     <div class="footer-info">
-                        © 2018 Ariel Gianatiempo. Made with <i class="fa fa-heart"></i>.
+                        © 2018 Matias Volgyi. Made with <i class="fa fa-heart"></i>.
                     </div>
                 </footer>
             </div>
