--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@ layout: compress
                 </nav>
                 <footer>
                     <div class="footer-info">
-                        © 2018 Ariel Gianatiempo. Made with <i class="fa fa-heart"></i>.
+                        © 2018 Matias Volgyi.
                     </div>
                 </footer>
             </div>
